Added Japanese, updated de and vi

--- a/CustomRPC/MainForm.resx
+++ b/CustomRPC/MainForm.resx
@@ -359,6 +359,13 @@
     <value>Italiano</value>
     <comment>@Invariant</comment>
   </data>
+  <data name="jaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="jaToolStripMenuItem.Text" xml:space="preserve">
+    <value>日本語</value>
+    <comment>@Invariant</comment>
+  </data>
   <data name="kuToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>180, 22</value>
   </data>
@@ -474,14 +481,14 @@
     <value>182, 6</value>
   </data>
   <data name="fiberAhmedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>154, 22</value>
   </data>
   <data name="fiberAhmedToolStripMenuItem.Text" xml:space="preserve">
     <value>FiberAhmed</value>
     <comment>@Invariant</comment>
   </data>
   <data name="shadowlToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>154, 22</value>
   </data>
   <data name="shadowlToolStripMenuItem.Text" xml:space="preserve">
     <value>ShadowlGamer</value>
@@ -495,7 +502,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="jayJakeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>112, 22</value>
   </data>
   <data name="jayJakeToolStripMenuItem.Text" xml:space="preserve">
     <value>JayJake</value>
@@ -509,14 +516,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="sebastianHviidToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>155, 22</value>
   </data>
   <data name="sebastianHviidToolStripMenuItem.Text" xml:space="preserve">
     <value>Sebastian Hviid</value>
     <comment>@Invariant</comment>
   </data>
   <data name="tobiasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>155, 22</value>
   </data>
   <data name="tobiasToolStripMenuItem.Text" xml:space="preserve">
     <value>Tobias</value>
@@ -530,21 +537,21 @@
     <comment>@Invariant</comment>
   </data>
   <data name="ypsolToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>135, 22</value>
   </data>
   <data name="ypsolToolStripMenuItem.Text" xml:space="preserve">
     <value>Ypsol</value>
     <comment>@Invariant</comment>
   </data>
   <data name="ahmadToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>135, 22</value>
   </data>
   <data name="ahmadToolStripMenuItem.Text" xml:space="preserve">
     <value>ahmad</value>
     <comment>@Invariant</comment>
   </data>
   <data name="binarynoiseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>135, 22</value>
   </data>
   <data name="binarynoiseToolStripMenuItem.Text" xml:space="preserve">
     <value>binarynoise</value>
@@ -558,7 +565,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="alexGrivasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>132, 22</value>
   </data>
   <data name="alexGrivasToolStripMenuItem.Text" xml:space="preserve">
     <value>Alex Grivas</value>
@@ -572,21 +579,21 @@
     <comment>@Invariant</comment>
   </data>
   <data name="vexotToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>104, 22</value>
   </data>
   <data name="vexotToolStripMenuItem.Text" xml:space="preserve">
     <value>Vexot</value>
     <comment>@Invariant</comment>
   </data>
   <data name="epicToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>104, 22</value>
   </data>
   <data name="epicToolStripMenuItem.Text" xml:space="preserve">
     <value>Epic</value>
     <comment>@Invariant</comment>
   </data>
   <data name="pabloToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>104, 22</value>
   </data>
   <data name="pabloToolStripMenuItem.Text" xml:space="preserve">
     <value>Pablo</value>
@@ -600,7 +607,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="nicolasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>110, 22</value>
   </data>
   <data name="nicolasToolStripMenuItem.Text" xml:space="preserve">
     <value>Nenaff</value>
@@ -614,14 +621,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="galaxy6430ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>149, 22</value>
   </data>
   <data name="galaxy6430ToolStripMenuItem.Text" xml:space="preserve">
     <value>Galaxy6430</value>
     <comment>@Invariant</comment>
   </data>
   <data name="kahpotVanillaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>149, 22</value>
   </data>
   <data name="kahpotVanillaToolStripMenuItem.Text" xml:space="preserve">
     <value>Kahpot Vanilla</value>
@@ -635,7 +642,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="ballaBotondToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>141, 22</value>
   </data>
   <data name="ballaBotondToolStripMenuItem.Text" xml:space="preserve">
     <value>Balla Botond</value>
@@ -649,21 +656,21 @@
     <comment>@Invariant</comment>
   </data>
   <data name="hapnanToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>145, 22</value>
   </data>
   <data name="hapnanToolStripMenuItem.Text" xml:space="preserve">
     <value>Hapnan</value>
     <comment>@Invariant</comment>
   </data>
   <data name="apolyciousToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>145, 22</value>
   </data>
   <data name="apolyciousToolStripMenuItem.Text" xml:space="preserve">
     <value>Apolycious</value>
     <comment>@Invariant</comment>
   </data>
   <data name="bayuSopwanToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>145, 22</value>
   </data>
   <data name="bayuSopwanToolStripMenuItem.Text" xml:space="preserve">
     <value>Bayu Sopwan</value>
@@ -677,14 +684,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="djd320ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>129, 22</value>
   </data>
   <data name="djd320ToolStripMenuItem.Text" xml:space="preserve">
     <value>DJD320</value>
     <comment>@Invariant</comment>
   </data>
   <data name="cubeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>129, 22</value>
   </data>
   <data name="cubeToolStripMenuItem.Text" xml:space="preserve">
     <value>ItsMrCube</value>
@@ -695,6 +702,20 @@
   </data>
   <data name="italianToolStripMenuItem.Text" xml:space="preserve">
     <value>Italiano (Italian)</value>
+    <comment>@Invariant</comment>
+  </data>
+  <data name="kabikira000ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="kabikira000ToolStripMenuItem.Text" xml:space="preserve">
+    <value>KABIKIRA000</value>
+    <comment>@Invariant</comment>
+  </data>
+  <data name="japaneseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>237, 22</value>
+  </data>
+  <data name="japaneseToolStripMenuItem.Text" xml:space="preserve">
+    <value>日本語 (Japanese)</value>
     <comment>@Invariant</comment>
   </data>
   <data name="samTheNoobToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
@@ -712,7 +733,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="psychonautToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>133, 22</value>
   </data>
   <data name="psychonautToolStripMenuItem.Text" xml:space="preserve">
     <value>White Rose</value>
@@ -726,7 +747,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="jeremyzijlemansToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>160, 22</value>
   </data>
   <data name="jeremyzijlemansToolStripMenuItem.Text" xml:space="preserve">
     <value>Jeremyzijlemans</value>
@@ -740,14 +761,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="lolToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>178, 22</value>
   </data>
   <data name="lolToolStripMenuItem.Text" xml:space="preserve">
     <value>Lol1112345.lol12345</value>
     <comment>@Invariant</comment>
   </data>
   <data name="lisoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>178, 22</value>
   </data>
   <data name="lisoToolStripMenuItem.Text" xml:space="preserve">
     <value>Liso</value>
@@ -775,7 +796,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="maximmax42ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>146, 22</value>
   </data>
   <data name="maximmax42ToolStripMenuItem.Text" xml:space="preserve">
     <value>maximmax42</value>
@@ -789,14 +810,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="squisheeFreshyToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>158, 22</value>
   </data>
   <data name="squisheeFreshyToolStripMenuItem.Text" xml:space="preserve">
     <value>Squishee Freshy</value>
     <comment>@Invariant</comment>
   </data>
   <data name="gameToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>158, 22</value>
   </data>
   <data name="gameToolStripMenuItem.Text" xml:space="preserve">
     <value>Game</value>
@@ -810,7 +831,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="ozanToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>136, 22</value>
   </data>
   <data name="ozanToolStripMenuItem.Text" xml:space="preserve">
     <value>Ozan Akyüz</value>
@@ -824,14 +845,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="mechaniXToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>162, 22</value>
   </data>
   <data name="mechaniXToolStripMenuItem.Text" xml:space="preserve">
     <value>MechaniX</value>
     <comment>@Invariant</comment>
   </data>
   <data name="dmitromintenkoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>162, 22</value>
   </data>
   <data name="dmitromintenkoToolStripMenuItem.Text" xml:space="preserve">
     <value>Dmitromintenko</value>
@@ -845,21 +866,21 @@
     <comment>@Invariant</comment>
   </data>
   <data name="MykmToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>162, 22</value>
   </data>
   <data name="MykmToolStripMenuItem.Text" xml:space="preserve">
     <value>Mykm</value>
     <comment>@Invariant</comment>
   </data>
   <data name="Phnthnhnm0612toolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>162, 22</value>
   </data>
   <data name="Phnthnhnm0612toolStripMenuItem.Text" xml:space="preserve">
     <value>Phnthnhnm0612</value>
     <comment>@Invariant</comment>
   </data>
   <data name="dsbachleToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>162, 22</value>
   </data>
   <data name="dsbachleToolStripMenuItem.Text" xml:space="preserve">
     <value>dsbachle</value>
@@ -873,14 +894,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="zjsunToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>118, 22</value>
   </data>
   <data name="zjsunToolStripMenuItem.Text" xml:space="preserve">
     <value>Zjsun.ca</value>
     <comment>@Invariant</comment>
   </data>
   <data name="zozochaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>118, 22</value>
   </data>
   <data name="zozochaToolStripMenuItem.Text" xml:space="preserve">
     <value>zozocha</value>
@@ -894,7 +915,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="westxluToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>149, 22</value>
   </data>
   <data name="westxluToolStripMenuItem.Text" xml:space="preserve">
     <value>蘆筍 (westxlu)</value>
@@ -2496,6 +2517,12 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;itToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;jaToolStripMenuItem.Name" xml:space="preserve">
+    <value>jaToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;jaToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;kuToolStripMenuItem.Name" xml:space="preserve">
     <value>kuToolStripMenuItem</value>
   </data>
@@ -2766,6 +2793,12 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;apolyciousToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;bayuSopwanToolStripMenuItem.Name" xml:space="preserve">
+    <value>bayuSopwanToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;bayuSopwanToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;italianToolStripMenuItem.Name" xml:space="preserve">
     <value>italianToolStripMenuItem</value>
   </data>
@@ -2782,6 +2815,18 @@ To take effect, both fields should be more than 0.</value>
     <value>cubeToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;cubeToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;japaneseToolStripMenuItem.Name" xml:space="preserve">
+    <value>japaneseToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;japaneseToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;kabikira000ToolStripMenuItem.Name" xml:space="preserve">
+    <value>kabikira000ToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;kabikira000ToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;kurdishToolStripMenuItem.Name" xml:space="preserve">
@@ -3005,12 +3050,6 @@ To take effect, both fields should be more than 0.</value>
   </data>
   <data name="&gt;&gt;toolStripStatusLabelStatus.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;bayuSopwanToolStripMenuItem.Name" xml:space="preserve">
-    <value>bayuSopwanToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;bayuSopwanToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>MainForm</value>
