--- a/CustomRPC/About.ja.resx
+++ b/CustomRPC/About.ja.resx
@@ -117,65 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Fehler</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelMadeBy.Location" type="System.Drawing.Point, System.Drawing">
+    <value>162, 93</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>Keine ID wurde festgelegt!</value>
+  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>164, 19</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Fehler beim herunterladen oder installieren eines Updates.
-Drücke "Ja" zum Wiederholen oder "Nein" um es manuell herunterzuladen.</value>
+  <data name="labelMadeBy.Text" xml:space="preserve">
+    <value>作成者: maximmax42</value>
   </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>Erster Start</value>
+  <data name="buttonClose.Text" xml:space="preserve">
+    <value>閉じる</value>
   </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Möchtest du die Anleitung öffnen?
-Du kannst es jederzeit unter Hilfe -&gt; Öffne das Handbuch oder mit der F1-Taste aufrufen.</value>
-  </data>
-  <data name="information" xml:space="preserve">
-    <value>Information</value>
-  </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>Verbunden</value>
-  </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>Verbinde...</value>
-    <comment>`</comment>
-  </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Verbindung fehlgeschlagen (Läuft Discord?)</value>
-  </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>Getrennt</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>Verbindungsfehler (Falsche ID?)</value>
-  </data>
-  <data name="errorCannotConnect" xml:space="preserve">
-    <value></value>
-    <comment>Es kann keine Verbindung zum Discord-Client hergestellt werden.
-Bist du sicher, dass es läuft?</comment>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>Ungültige URL für die Knöpfe angegeben oder der Text ist zu lang!</value>
-  </data>
-  <data name="errorNoInternet" xml:space="preserve">
-    <value>Keine Internetverbindung!</value>
-  </data>
-  <data name="noUpdatesFound" xml:space="preserve">
-    <value>Keine Updates gefunden!</value>
-  </data>
-  <data name="errorCorruptSettings" xml:space="preserve">
-    <value>Einstellungen Datei ist Beschädigt.
-Drücke "Ja" um sie zurückzusetzen oder "Nein" um zu verlassen.</value>
-  </data>
-  <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>Das importieren des Presetd ist fehlgeschlagen, die datei ist fehlerhaft, fehlt oder wurde nicht korrekt formatiert.</value>
-  </data>
-  <data name="askAnalyticsConsent" xml:space="preserve">
-    <value>Erlaubst du das CustomRP deine Benutzungs Analyse and den Developer sendet?
-(Alle daten sind nicht Personalisiert.)</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>CustomRPについて</value>
   </data>
 </root>
