Updated id and ja

--- a/CustomRPC/ErrorReportViewer.ja.resx
+++ b/CustomRPC/ErrorReportViewer.ja.resx
@@ -117,59 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>エラー</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>エラーレポート</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>IDが指定されていません！</value>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>はい</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>アップデートのダウンロードまたはインストール中にエラーが発生しました。
-"はい"を押して再試行するか、"いいえ"を押して手動でダウンロードします。</value>
-  </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>初回起動</value>
-  </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>マニュアルを開きますか？
-ヘルプ&gt; マニュアルを開くに移動するか、F1キーを押すと、いつでも開くことができます。</value>
-  </data>
-  <data name="information" xml:space="preserve">
-    <value>情報</value>
-  </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>接続完了</value>
-  </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>接続中...</value>
-  </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>接続に失敗しました（Discordは起動していますか？）</value>
-  </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>未接続</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>接続エラー（IDにお間違いないはでしょうか？）</value>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>(ボタン)に無効なURLが指定されているか、テキストが長すぎます！</value>
-  </data>
-  <data name="errorNoInternet" xml:space="preserve">
-    <value>インターネットに接続できません！</value>
-  </data>
-  <data name="noUpdatesFound" xml:space="preserve">
-    <value>更新はありません！</value>
-  </data>
-  <data name="errorCorruptSettings" xml:space="preserve">
-    <value>設定ファイルが壊れています。
-はい を押して設定をリセットするか、いいえ を押して終了します。</value>
-  </data>
-  <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>プリセットの読み込みに失敗しました。ファイルが見つからないか、破損しているか、正しくフォーマットされていません。</value>
-  </data>
-  <data name="askAnalyticsConsent" xml:space="preserve">
-    <value>CustomRPがあなたの使用状況の分析を開発者に送ることを許可しますか？
-(すべてのデータは非個人化されています。)</value>
+  <data name="labelInfo.Text" xml:space="preserve">
+    <value>CustomRPは次の未処理の例外のためにセッションでクラッシュしました:</value>
   </data>
 </root>
