--- a/CustomRPC/MainForm.cs.resx
+++ b/CustomRPC/MainForm.cs.resx
@@ -420,4 +420,7 @@ Aby se projevily, obě pole by měla být větší než 0.</value>
   <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
     <value>Připojovat automaticky</value>
   </data>
+  <data name="allowAnalyticsToolStripMenuItem.Text" xml:space="preserve">
+    <value>Povolit analýzu</value>
+  </data>
 </root>
