--- a/CustomRPC/Strings.ja.resx
+++ b/CustomRPC/Strings.ja.resx
@@ -150,7 +150,7 @@
     <value>未接続</value>
   </data>
   <data name="statusError" xml:space="preserve">
-    <value>接続エラー（IDにお間違いないはでしょうか？）</value>
+    <value>接続エラー（IDにお間違いはないですか？）</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
     <value>(ボタン)に無効なURLが指定されているか、テキストが長すぎます！</value>
